--- a/Mission9_rcroft1_2/Views/Home/Index.cshtml
+++ b/Mission9_rcroft1_2/Views/Home/Index.cshtml
@@ -8,21 +8,33 @@
 
 @*this gives us our output on the main page*@
 
-@foreach(Book b in Model.Books)
-{
-    <h3>@b.Title</h3>
-    <ul>
-        <li>Author: @b.Author</li>
-        <li>Publisher: @b.Publisher</li>
-        <li>ISBN: @b.Isbn</li>
-        <li>Classification: @b.Classification</li>
-        <li>Category: @b.Category</li>
-        <li>Number of Pages: @b.PageCount</li>
-        <li>Price: @b.Price</li>
-    </ul>
-    <br />
+@foreach (Book b in Model.Books)
+{<div class="card card-outline-primary m-1 p-1">
+     <div class="bg-faded p-1">
+         <h3>
+             @b.Title
+         <span class="badge badge-pill badge-primary" style="float:right">
+             <small>@b.Price.ToString("c")</small>
+         </span>
+     </h3>
+         <div class="card-text p-1">
+             <ul>
+                 <li>Author: @b.Author</li>
+                 <li>Publisher: @b.Publisher</li>
+                 <li>ISBN: @b.Isbn</li>
+                 <li>Classification: @b.Classification</li>
+                 <li>Category: @b.Category</li>
+                 <li>Number of Pages: @b.PageCount</li>
+                 <li>Price: @b.Price</li>
+             </ul>
+             <br />
+         </div>
+        </div>
+     </div>
 }
 
 @*links at the bottom of the page*@
 
-<div page-book="@Model.BookInfo" page-action="Index"></div>
+<div page-book="@Model.BookInfo" page-action="Index" page-classes-enabled="true"
+     page-class="btn" page-class-normal="btn-outline-dark"
+     page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
