--- a/Mission9_rcroft1_2/Views/Shared/_Layout.cshtml
+++ b/Mission9_rcroft1_2/Views/Shared/_Layout.cshtml
@@ -4,10 +4,21 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+
+    <link href="~/lib/css/bootstrap.min.css" rel="stylesheet" />
+
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div class="bg-dark text-white p-2">
+        <span class="navbar-brand ml-2">BOOK STORE</span>
+    </div>
+    <div class="row m-1 p-1">
+        <div id="categories" class="col-3">
+            Books
+        </div>
+        <div class="col-9">
+            @RenderBody()
+        </div>
     </div>
 </body>
 </html>
