--- a/Mission9_rcroft1_2/Views/Home/Index.cshtml
+++ b/Mission9_rcroft1_2/Views/Home/Index.cshtml
@@ -9,28 +9,8 @@
 @*this gives us our output on the main page*@
 
 @foreach (Book b in Model.Books)
-{<div class="card card-outline-primary m-1 p-1">
-     <div class="bg-faded p-1">
-         <h3>
-             @b.Title
-         <span class="badge badge-pill badge-primary" style="float:right">
-             <small>@b.Price.ToString("c")</small>
-         </span>
-     </h3>
-         <div class="card-text p-1">
-             <ul>
-                 <li>Author: @b.Author</li>
-                 <li>Publisher: @b.Publisher</li>
-                 <li>ISBN: @b.Isbn</li>
-                 <li>Classification: @b.Classification</li>
-                 <li>Category: @b.Category</li>
-                 <li>Number of Pages: @b.PageCount</li>
-                 <li>Price: @b.Price</li>
-             </ul>
-             <br />
-         </div>
-        </div>
-     </div>
+{
+    <partial name="BookSummary" model="b"/>
 }
 
 @*links at the bottom of the page*@
