--- a/Mission9_rcroft1_2/Views/_ViewImports.cshtml
+++ b/Mission9_rcroft1_2/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @addTagHelper *, Mission9_rcroft1_2
 @using Mission9_rcroft1_2.Models
 @using Mission9_rcroft1_2.Models.ViewModels
+@using Mission9_rcroft1_2.Infrastructure
