--- a/Mission9_rcroft1_2/Pages/AddBook.cshtml
+++ b/Mission9_rcroft1_2/Pages/AddBook.cshtml
@@ -26,6 +26,14 @@
                     <td>@i.Quantity</td>
                     <td>@i.Book.Price</td>
                     <td>@(i.Quantity * i.Book.Price)</td>
+
+                    <td class="text-center">
+                        <form method="post" asp-page-handler="Remove">
+                            <input type="hidden" name="bookId" value="@i.Book.BookID" />
+                            <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                            <button type="submit" class=" btn btn-sm btn-danger">Remove</button>
+                        </form>
+                    </td>
                 </tr>
             }
     </tbody>
@@ -41,4 +49,4 @@
 
 @*link to homepage*@
 
-<a href="/Page1" class="btn btn-outline-secondary">Continue Shopping</a>
+<a href="@Model.ReturnUrl" class="btn btn-outline-secondary">Continue Shopping</a>
