--- a/Mission9_rcroft1_2/Pages/_ViewImports.cshtml
+++ b/Mission9_rcroft1_2/Pages/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-﻿@addTagHelper *, Microsoft.Asp.NetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Mission9_rcroft1_2.Models
