--- a/Mission9_rcroft1_2/Pages/Confirmation.cshtml
+++ b/Mission9_rcroft1_2/Pages/Confirmation.cshtml
@@ -2,7 +2,7 @@
 @model Mission9_rcroft1_2.Pages.ConfirmationModel
 @{
 }
-
+@*confirmation page*@
 <div class="text-center">
     <h2>Order recieved!</h2>
     <a class="btn btn-primary" asp-controller="Home">Return Home</a>
